feat(SearchController): display only relevant results